# robyn-config

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  general_report.md
.github/workflows/: ci.yml  python-publish.yml
compose/app/: Dockerfile  dev.sh  prod.py  prod.sqlalchemy.py  prod.tortoise.py
docs/: requirements.txt
docs/plans/: 2026-02-28-adminpanel-sqlalchemy-parity-design.md  2026-02-28-adminpanel-sqlalchemy-parity.md
docs/source/: README.md  conf.py  index.rst
qc_robyn_admin-main/: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
qc_robyn_admin-main/docs/components/: model_admin.md
qc_robyn_admin-main/docs/getting_started/: installation.md  quickstart.md
qc_robyn_admin-main/qc_robyn_admin/: __init__.py  auth_models.py
qc_robyn_admin-main/qc_robyn_admin/core/: fields.py  filters.py  site.py
qc_robyn_admin-main/qc_robyn_admin/templates/admin/: index.html
qc_robyn_admin-main/qc_robyn_admin/templates/admin/components/: form_modal.html  inline_modal.html
src/: cli.py
src/add/: __init__.py  utils.py
src/add/ddd/domain/__name__/: entities.py.jinja2  repository.py.jinja2
src/add/ddd/infrastructure/sqlalchemy/: __name___table.py.jinja2
src/add/ddd/operational/: __name__.py.jinja2
src/add/ddd/presentation/__name__/: contracts.py.jinja2  (+1 more)
src/add/mvc/views/: __name__.py.jinja2
src/add/utils/: __init__.py  _entity.py  _injection.py  _paths.py  _templates.py
src/adminpanel/: __init__.py  utils.py
src/adminpanel/template/: __init__.py.jinja2  auth_admin.py  auth_admin_sqlalchemy.py  auth_models.py  auth_models_sqlalchemy.py  models.py  models_sqlalchemy.py  project_tables.py
src/adminpanel/template/core/: __init__.py  _utils.py  admin.py  fields.py  filters.py  inline.py  menu.py  site.py  sqlalchemy_admin.py  sqlalchemy_site.py
src/adminpanel/template/i18n/: translations.py
src/adminpanel/template/orm/: __init__.py  __init__.py.jinja2  base.py  sqlalchemy.py  tortoise.py
src/adminpanel/template/renderers/: base.py
src/adminpanel/utils/: __init__.py  _constants.py  _dependencies.py  _routing.py  _tables.py  _template_io.py
src/app/domain/users/: repository.py
src/app/infrastructure/: __init__.py
src/app/operational/: authentication.py  users.py
src/app/presentation/authentication/: contracts.py
src/app_ddd/domain/users/: services.py
src/app_mvc/: cache.py  schemas.py  server.py
src/app_mvc/models/sqlalchemy/: __init__.py  database.py  repository.py
src/app_mvc/models/tortoise/: database.py  repository.py
src/app_mvc/views/: __init__.py  authentication.py  contracts.py  users.py
src/common/: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
src/common/compose/app/: Dockerfile
src/create/: __init__.py  interactive.py  utils.py
src/create/common/: .env.example  .env.example.jinja2  Makefile.jinja2  README.md  README.md.jinja2  docker-compose.yml  docker-compose.yml.jinja2  pyproject.toml.jinja2
src/create/ddd/: server.py
src/create/ddd/config/: __init__.py  __init__.py.jinja2  logging.py
src/create/ddd/infrastructure/: __init__.py
src/create/ddd/operational/: authentication.py  users.py
src/create/ddd/presentation/: _helpers.py  healthcheck.py
src/create/mvc/: cache.py  schemas.py  schemas.py.jinja2  server.py  utils.py
src/create/mvc/config/: __init__.py.jinja2
src/create/mvc/middlewares/: sessions.py
src/create/mvc/views/: authentication.py  contracts.py  healthcheck.py  helpers.py  users.py
src/create/utils/: __init__.py  _config.py  _filesystem.py  _interactive.py  _package_manager.py
src/ddd/: server.py
src/ddd/domain/users/: services.py
src/ddd/operational/: users.py
src/monitoring/: __init__.py
src/monitoring/app/: metrics.py
src/monitoring/template/: docker-compose.monitoring.yml
src/monitoring/utils/: __init__.py  _app.py  _constants.py  _dependencies.py  _template_io.py
src/mvc/: schemas.py  urls.py
stitch/edit_record_details/: code.html
stitch/model_records_list_view/: code.html
stitch/robyn_admin_dashboard/: code.html
stitch/robyn_admin_login_page/: code.html
stitch/robyn_app_models_index/: code.html
tests/integration/: conftest.py  test_add_command.py  test_adminpanel_command.py  test_app_end_to_end.py  test_create_command.py  test_monitoring_command.py
tests/unit/: test_adminpanel_utils.py  test_cli_interactive_create.py  test_monitoring_dependencies.py  test_pydantic_annotated.py  test_utils.py
(+161 files in other folders)
