[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robyn-config"
version = "0.1.0"
description = "CLI for scaffolding Robyn backend templates (DDD/MVC with SQLAlchemy or Tortoise)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "Leshqa", email = "slav4ik77777@gmail.com"}
]
dependencies = [
  "click>=8.1.7",
  "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.10.0",
  "pytest>=7.4.0",
  "build>=1.2.1",
]

[project.scripts]
robyn-config = "cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]
